--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 .homeHero {
-  background-image: url("../../public/assets/image/heroSection/Hero Section1.png");
+  background-image: url("../../public/assets/image/heroSection/hero.png");
   background-size: cover;
   background-position: center;
 }
+
+.homeHero4 {
+  background-image: url("../../public/assets/image/heroSection/about-test.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.homeHero4::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:  rgba(255,255,255,0.5); /* Adjust the color and opacity */
+  z-index: 1; /* Keep the overlay behind the content */
+}
+
 .homeHero3 {
-  background-image: url("../../public/assets/image/home/Carrer.png");
+  background-image: url("../../public/assets/image/heroSection/career-test25.png");
   background-size: cover;
   background-position: center;
 }
+
+
 .homeHero2 {
-  background-image: url("../../public/assets/image/heroSection/Hero Section2.png");
+  background-image: url("../../public/assets/image/heroSection/Hero\ Section2.png");
   background-size: cover;
   background-position: center;
 }
+
+
+
 @font-face {
   font-family: "Satoshi-Black";
   src: url('../../public/assets/fonts/Satoshi-Variable.ttf') format("truetype");
@@ -57,9 +80,11 @@
     transform: translateX(-100%);
   }
 }
+
 .animate-scroll {
-  animation: scroll 10s linear infinite;
+  animation: scroll 20s linear infinite; /* Increased duration */
 }
+
 .animation {
   height: 1.8rem;
   overflow: hidden;
@@ -71,8 +96,7 @@
   display: inline-block;
 }
 .animation div:first-child {
-  animation: text-animation 6s infinite;
-  /* padding:3px 5px 2px 5px; */
+  animation: text-animation 15s infinite; /* Slower animation */
 }
 .first div {
   background-color: #0c9955b9;
