--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,16 @@
   background-position: center;
 }
 
+.homeHero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:  rgba(255,255,255,0.5); /* Adjust the color and opacity */
+  z-index: 1; /* Keep the overlay behind the content */
+}
 .homeHero4 {
   background-image: url("../../public/assets/image/heroSection/about-test.jpg");
   background-size: cover;
